# agentops-sdk

./: LICENSE  README.md  pyproject.toml
examples/: agent_bootstrap.py
src/agentops/: __init__.py  _env.py  async_client.py  client.py  guardrails.py  tables.py
src/agentops_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
