[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-sdk"
version = "0.3.0"
description = "AgentOps Python SDK — tracing, prompts, guardrails, and content management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentOps" }]
dependencies = [
  "langfuse>=2.0.0,<3.0",
  "requests>=2.28.0",
  "httpx>=0.25.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
async = [
  "aiofiles>=23.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentops = ["py.typed"]


